--- a/styles.css
+++ b/styles.css
@@ -1,64 +1,781 @@
 @import url('https://fonts.googleapis.com/css2?family=Saira:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Montserrat+Alternates:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;1,100;1,200;1,300;1,400;1,500;1,600&display=swap');
 
-* {
-    transition: all 0.5s ease-in-out;
-    font-family: "Saira", sans-serif;
-    color: rgb(53, 52, 56);
-    font-weight: 200;
+html {
+    scroll-behavior: smooth;
 }
 
-body {
+* {
+    /* transition: all 0.5s ease-in-out; */
+    box-sizing: border-box;
+    font-family: "Saira", sans-serif;
+    color: rgb(0, 0, 0);
+    font-weight: 200;
     padding: 0;
     margin: 0;
+}
+
+.navbar {
+    background: rgb(54, 29, 70);
+    height: 80px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    font-size: 1.2rem;
+    position: sticky;
+    top: 0;
+    z-index: 999;
+}
+
+.navbar_container {
+    display: flex;
+    justify-content: space-between;
+    height: 80px;
+    z-index: 1;
+    width: 100%;
+    max-width: 1300px;
+    margin: 0 auto;
+    padding: 0 50px;
+}
+
+#navbar_logo {
+    background-color: rgb(203, 239, 182);
+    background-image: linear-gradient(to top, rgb(255, 46, 175) 0%, rgb(182, 255, 143) 100%);
+    background-size: 100%;
+    -webkit-background-clip: text;
+    -moz-background-clip: text;
+    -webkit-text-fill-color: transparent;
+    -moz-text-fill-color: transparent;
+    display: flex;
+    font-weight: 400;
+    align-items: center;
+    cursor: pointer;
+    font-size: 2rem;
+}
+
+.fa-icon {
+    margin-right: 0.5rem;
+}
+
+.navbar_menu {
+    display: flex;
+    align-items: center;
+    list-style: none;
+    text-align: center;
+}
+
+.navbar_item {
+    height: 80px;
+}
+
+.navbar_links {
+    color: rgb(255, 255, 255);
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    padding: 0 1rem;
+    height: 100%;
+}
+
+.navbar_switch {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    padding: 0 0;
+    width: 100%;
+}
+
+.button {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    padding: 10px 20px;
+    height: 100%;
+    width: 100%;
+    border: none;
+    outline: none;
+    border-radius: 20px;
+    background: rgb(205, 35, 140);
+    color: rgb(255, 255, 255);
+}
+
+.button:hover {
+    background: rgb(182, 255, 143);
+    color: rgb(54, 29, 70);
+    transition: all 0.3s ease-in-out;
+}
+
+.navbar_links:hover {
+    color: rgb(255, 46, 175);
+    transition: all 0.3s ease-in-out;
+}
+
+@media screen and (max-width: 960px) {
+    .navbar_container {
+        display: flex;
+        justify-content: space-between;
+        height: 80px;
+        z-index: 1;
+        width: 100%;
+        max-width: 1300px;
+        padding: 0;
+    }
+
+    .navbar_menu {
+        display: grid;
+        grid-template-columns: auto;
+        margin: 0;
+        width: 100%;
+        position: absolute;
+        top: -1000px;
+        opacity: 0;
+        transition: all 0.5s ease;
+        height: 50vh;
+        z-index: -1;
+        background: rgb(54, 29, 70); /* temp */
+    }
+
+    .navbar_menu.active {
+        background: rgb(54, 29, 70);
+        top: 100%;
+        opacity: 1;
+        transition: all 0.5s ease;
+        z-index: 99;
+        height: 50vh;
+        font-size: 1.6rem;
+    }
+
+    #navbar_logo {
+        padding-left: 25px;
+    }
+
+    .navbar_toggle .bar {
+        width: 25px;
+        height: 3px;
+        margin: 5px auto;
+        transition: all 0.3s ease-in-out;
+        background: rgb(255, 255, 255);
+
+    }
+
+    .navbar_item {
+        width: 100%;
+    }
+
+    .navbar_links {
+        text-align: center;
+        padding: 2rem;
+        width: 100%;
+        display: table;
+    }
+
+    #mobile_menu {
+        position: absolute;
+        top: 20%;
+        right: 5%;
+        transform: translate(5%, 20%);
+    }
+
+    .navbar_btn {
+        padding-bottom: 2rem;
+    }
+
+    .button {
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        width: 80%;
+        height: 80px;
+        margin: 0;
+    }
+
+    .navbar_toggle .bar {
+        display: block;
+        cursor: pointer;
+        background-image: linear-gradient(to top, rgb(255, 46, 175) 0%, rgb(182, 255, 143) 100%);
+    }
+
+    #mobile_menu.is-active .bar:nth-child(2) {
+        opacity: 0;
+    }
+
+    #mobile_menu.is-active .bar:nth-child(1) {
+        transform: translateY(8px) rotate(45deg);
+    }
+
+    #mobile_menu.is-active .bar:nth-child(3) {
+        transform: translateY(-8px) rotate(-45deg);
+    }
+
 }
 
 a {
     text-decoration: none;
 }
 
-.box-container {
+/* Hero CSS */
+
+.main {
+    background-color: rgb(54, 29, 70);
+}
+
+.main_container {
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    align-items: center;
+    justify-self: center;
+    justify-content: center;
+    margin: 0 auto;
+    height: 90vh;
+    background-color: rgb(54, 29, 70);
+    z-index: 1;
+    width: 100%;
+    max-width: 1300px;
+    padding: 0 50px;
+}
+
+.main_content h1 {
+    font-size: 4rem;
+    font-weight: 300;
+    background-color: rgb(203, 239, 182);
+    background-image: linear-gradient(to top, rgb(255, 46, 175) 0%, rgb(182, 255, 143) 100%);
+    background-size: 100%;
+    -webkit-background-clip: text;
+    -moz-background-clip: text;
+    -webkit-text-fill-color: transparent;
+    -moz-text-fill-color: transparent;
+}
+
+.main_content h2 {
+    font-size: 2rem;
+    font-weight: 300;
+    background-color: rgb(203, 239, 182);
+    background-image: linear-gradient(to top, rgb(125, 145, 255) 0%, rgb(182, 255, 143) 100%);
+    background-size: 100%;
+    -webkit-background-clip: text;
+    -moz-background-clip: text;
+    -webkit-text-fill-color: transparent;
+    -moz-text-fill-color: transparent;
+}
+
+.main_content p {
+    font-family: 'Montserrat Alternates', sans-serif;
+    font-weight: 100;
+    font-size: 1rem;
+    margin-top: 1rem;
+    color: aliceblue;
+}
+
+.main_btn {
+    --glow-color: rgb(217, 176, 255);
+    --glow-spread-color: rgba(255, 46, 175, 0.7); /* rgba(191, 123, 255, 0.781); */
+    --enhanced-glow-color: rgb(231, 206, 255);
+    --btn-color: rgb(100, 61, 136);
+    border: .25em solid var(--glow-color);
     display: flex;
-    flex-wrap: wrap;
-    height: 100vh;
-    align-items: stretch;
-}
-
-.box {
-    padding: 10px;
-}
-
-.small-box {
-    min-height: 150px;
-    min-width: 250px;
-    flex-grow: 1;
-    background-color: rgb(204, 197, 214);
-}
-
-.long-box {
-    min-height: 150px;
-    min-width: 500px;
-    flex-grow: 4;
-    background-color: rgb(126, 122, 133);
-}
-
-.large-box {
-    min-height: 500px;
-    min-width: 410px;
-    flex-grow: 2;
-    background-color: rgb(90, 87, 94);
-}
-
-.pill {
+    align-items: center;
+    justify-self: center;
+    margin-top: 50px;
+    padding: 1em 3em;
+    color: var(--glow-color);
+    font-size: 15px;
+    font-weight: bold;
+    background-color: var(--btn-color);
+    border-radius: 4em;
+    outline: none;
+    box-shadow: 0 0 1em .25em var(--glow-color),
+           0 0 4em 1em var(--glow-spread-color),
+           inset 0 0 .75em .25em var(--glow-color);
+    text-shadow: 0 0 .5em var(--glow-color);
+    position: relative;
+    transition: all 0.3s;
+   }
+  
+.main_btn::after {
+    pointer-events: none;
+    content: "";
+    position: absolute;
+    top: 120%;
+    left: 0;
     height: 100%;
     width: 100%;
-    border: solid rgb(53, 52, 56);
-    box-sizing: border-box;
-    border-radius: 100px;
-    display: flex;
+    background-color: var(--glow-spread-color);
+    filter: blur(2em);
+    opacity: .7;
+    transform: perspective(1.5em) rotateX(35deg) scale(1, .6);
+}
+  
+.main_btn:hover {
+    color: var(--btn-color);
+    background-color: var(--glow-color);
+    box-shadow: 0 0 1em .25em var(--glow-color),
+            0 0 4em 2em var(--glow-spread-color),
+            inset 0 0 .75em .25em var(--glow-color);
+}
+
+.main_btn:active {
+    box-shadow: 0 0 0.6em .25em var(--glow-color),
+            0 0 2.5em 2em var(--glow-spread-color),
+            inset 0 0 .5em .25em var(--glow-color);
+}
+
+#project_btn {
+    color: white;
+}
+
+.project_card a { 
+    color: white;
+}
+
+.main_img_container {
+    text-align: center;
+}
+
+#main_img {
+    height: 80%;
+    width: 80%;
+    transform: translateX(0px);
+    /* animation: float 10s ease-out infinite; */
+}
+
+@keyframes float {
+    0%{
+        transform: translateY(0px);
+    }
+    50%{
+        transform: translateY(-30px);
+    }
+    100%{
+        transform: translateY(0px);
+    }
+}
+
+/* Mobile Responsive Hero  */
+@media screen and (max-width: 768px) {
+    .main_container {
+        display: grid;
+        grid-template-columns: auto;
+        align-items: center;
+        justify-self: center;
+        width: 100%;
+        margin: 0 auto;
+        height: 100vh;
+    }
+
+    .main_content {
+        text-align: center;
+        margin-bottom: 4rem;
+    }
+
+    .main_content h1 {
+        font-size: 3.5rem;
+    }
+
+    .main_content h2 {
+        font-size: 1.5rem;
+    }
+
+    .main_content p {
+        font-size: 1rem;
+    }
+
+    .main_content button {
+        margin: 0 auto;
+        margin-top: 2rem;
+    }
+
+    #websiteVersion {
+        display: none;
+    }
+}
+
+@media screen and (max-width: 480px) {
+    .main_content h1 {
+        font-size: 2.5rem;
+        margin-top: 2rem;
+    }
+
+    .main_content h2 {
+        font-size: 1.0rem;
+    }
+
+    .main_content p {
+        font-size: 0.5rem;
+    }
+
+    .main_content button {
+        margin: 0 auto;
+        margin-top: 2rem;
+    }
+
+}
+
+/* About Me Section  */
+#about_me {
+    padding-top: 400px;
+    padding-bottom: 300px;
+    background-color: rgb(54, 29, 70);
+    /* background-image: linear-gradient(rgb(54, 29, 70),rgb(54, 29, 70), rgba(169, 16, 110, 0.728), rgb(54, 29, 70), rgb(54, 29, 70)); */
+    display: none;
+    height: 500px;
+    flex-direction: column;
     justify-content: center;
     align-items: center;
 }
 
-.hidden {
-    display: none;
+#closeAboutMeButton {
+    background-color: transparent;
+    border: none;
+    font-size: 40px;
+    font-weight: 800;
+    background-image: linear-gradient(to left, rgb(125, 145, 255) 0%, rgb(182, 255, 143) 100%);
+    background-size: 100%;
+    -webkit-background-clip: text;
+    -moz-background-clip: text;
+    -webkit-text-fill-color: transparent;
+    -moz-text-fill-color: transparent;
+    align-self: flex-start;
+    margin-left: 20px;
 }
+#about_me h2 {
+    font-size: 60px;
+    justify-self: flex-end;
+    font-weight: 300;
+    background-color: rgb(203, 239, 182);
+    background-image: linear-gradient(to top, rgb(125, 145, 255) 0%, rgb(182, 255, 143) 100%);
+    background-size: 100%;
+    -webkit-background-clip: text;
+    -moz-background-clip: text;
+    -webkit-text-fill-color: transparent;
+    -moz-text-fill-color: transparent;
+}
+
+.aboutMeContent {
+    display: flex;
+    /* align-items: center; */
+    justify-content: center;
+    flex-direction: row;
+    gap: 50px;
+    margin: 0 50px;
+}
+
+.aboutMeContent img {
+    border-radius: 300px;
+    border: 1px solid rgb(255, 255, 255);
+    filter: drop-shadow(0.55rem 0.55rem 0.5rem rgba(0, 0, 0, 0.5));
+    height: 50%;
+}
+
+.aboutMeContent p {
+    align-self: flex-start;
+    padding-top: 30px;
+    color: white;
+}
+
+.aboutMeContent p span {
+    color: white;
+    font-weight: 400;
+}
+
+@media screen and (max-width: 960px) {
+    #about_me {
+        padding-bottom: 300px;
+        padding-top: 510px;
+    }
+    .aboutMeContent {
+        flex-direction: column;
+        align-items: center;
+        padding-top: 20px;
+    }
+
+    .aboutMeContent img {
+        width: 30%;
+        height: auto;
+    }
+
+    .aboutMeContent p {
+        margin: 0 50px;
+        padding-top: 0px;
+    }
+}
+
+/* Projects Section CSS  */
+
+.projects {
+    background: rgb(54, 29, 70);
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    height: 80vh;
+}
+
+.projects h1 {
+    background-color: rgb(203, 239, 182);
+    background-image: linear-gradient(to bottom,  rgb(210, 159, 255) 0%, rgb(255, 24, 167) 100%);
+    background-size: 100%;
+    font-weight: 600;
+    -webkit-background-clip: text;
+    -moz-background-clip: text;
+    -webkit-text-fill-color: transparent;
+    -moz-text-fill-color: transparent;
+    margin-bottom: 1rem;
+}
+
+.projects_container {
+    display: flex;
+    justify-content: center;
+    flex-wrap: wrap;
+}
+
+.project_card {
+    margin: 1rem;
+    height: 525px;
+    width: 400px;
+    border-radius: 20px;
+    background-image: linear-gradient(to bottom, rgb(54, 29, 70,0) 0%, rgba(54, 29, 70,0.6) 100%), url(/images/theCompany.png);
+    background-size: cover;
+    background-position: center center;
+    position: relative;
+    color: white;
+}
+
+.project_card:nth-child(2) {
+    background-image: linear-gradient(to bottom, rgb(54, 29, 70,0) 0%, rgba(54, 29, 70,0.6) 100%), url(/images/royalCat.jpg);
+}
+
+.projects h2 {
+    position: absolute;
+    top: 350px;
+    left: 30px;
+}
+
+.project_card h2 {
+    color: white;
+}
+
+.project_card p {
+    position: absolute;
+    top: 400px;
+    left: 30px;
+    color: white;
+}
+
+.project_card button {
+    color: rgb(203, 239, 182);
+    padding: 10px 20px;
+    border: none;
+    outline: none;
+    border-radius: 20px;
+    background: rgb(100, 61, 136);
+    position: absolute;
+    top: 440px;
+    left: 30px;
+    cursor: pointer;
+}
+
+#project_1_website {
+    left: 170px;
+}
+
+.project_card:hover {
+    transform: scale(1.075);
+    transition: 0.2s ease-in;
+}
+
+@media screen and (max-width: 960px) {
+    .projects {
+        height: 1600px;
+    }
+
+    .projects h1 {
+        font-size: 2rem;
+        margin-top: 12rem;
+    }
+}
+
+@media screen and (max-width: 480px) {
+    .projects {
+        height: 1400px;
+    }
+
+    .projects h1 {
+        font-size: 1.2rem;
+    }
+
+    .project_card {
+        width: 300px;
+    }
+}
+
+.footer_container {
+    background-color: rgb(54, 29, 70);
+    padding: 3rem 0;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    justify-items: center;
+}
+
+#footer_logo {
+    color: white;
+    display: flex;
+    align-items: center;
+    cursor: pointer;
+    font-size: 2rem;
+}
+
+.footer_links {
+    width: 100%;
+    max-width: 1000px;
+    display: flex;
+    justify-content: center;
+}
+
+.footer_link_wrapper {
+    display: flex;
+}
+
+.footer_link_items {
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+    margin: 5px;
+    text-align: left;
+    box-sizing: border-box;
+}
+
+.social_icon_link {
+    color: white;
+    font-size: 24px;
+}
+
+.social_media {
+    max-width: 1000px;
+    width: 100%;
+}
+
+.social_media_wrap {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    width: 90%;
+    max-width: 1000px;
+    margin: 0 auto 0 auto;
+}
+
+.social_icons {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    width: 240px;
+}
+
+.fab {
+    color: white;
+    justify-self: flex-start;
+    margin-left: 20px;
+    cursor: pointer;
+    font-size: 2rem;
+    display: flex;
+    align-items: center;
+    margin-bottom: 16px;
+}
+
+.website_rights {
+    color: white;
+}
+
+.fa-otter {
+    color: white;
+}
+
+@media and (max-width: 820px) {
+    .footer_links {
+        /* padding-top: 2rem; */
+    }
+
+    #footer_logo {
+        margin-bottom: 2rem;
+    }
+
+    .website_rights {
+        margin-bottom: 2rem;
+    }
+
+    .footer_link_wrapper {
+        flex-direction: column;
+    }
+
+    .social_media_wrap {
+        flex-direction: column;
+    }
+
+    @media screen and (max-width: 480px) {
+        .footer_link_items {
+            margin: 0;
+            padding: 10px;
+            width: 100%;
+        }
+    }
+}
+
+/* The switch - the box around the slider */
+.switch {
+    display: block;
+    --width-of-switch: 3.5em;
+    --height-of-switch: 2em;
+    /* size of sliding icon -- sun and moon */
+    --size-of-icon: 1.4em;
+    /* it is like a inline-padding of switch */
+    --slider-offset: 0.3em;
+    position: relative;
+    width: var(--width-of-switch);
+    height: var(--height-of-switch);
+  }
+
+  /* Hide default HTML checkbox */
+.switch input {
+    opacity: 0;
+    width: 0;
+    height: 0;
+  }
+
+  /* The slider */
+.slider {
+    position: absolute;
+    cursor: pointer;
+    top: 0;
+    left: 20px;
+    right: 0;
+    bottom: 0;
+    background-color: #303136;
+    transition: .4s;
+    border-radius: 30px;
+  }
+
+  .slider:before {
+    position: absolute;
+    content: "";
+    height: var(--size-of-icon,1.4em);
+    width: var(--size-of-icon,1.4em);
+    border-radius: 20px;
+    left: var(--slider-offset,0.3em);
+    top: 50%;
+    transform: translateY(-50%);
+    background: #303136;
+    box-shadow: inset -3px -2px 5px -2px #8983f7, inset -10px -4px 0 0 #a3dafb;
+    ;
+   transition: .4s;
+  }
+
+  input:checked + .slider {
+    background-color: #f4f4f5;
+  }
+
+  input:checked + .slider:before {
+    left: calc(100% - (var(--size-of-icon,1.4em) + var(--slider-offset,0.3em)));
+    /* change the value of second inset in box-shadow to change the angle and direction of the moon  */
+    background: linear-gradient(40deg,#ff0080,#ff8c00 70%);
+    box-shadow: none;
+  }
